--- a/projects/landing-page/index.html
+++ b/projects/landing-page/index.html
@@ -34,8 +34,13 @@
             <div class="box"><div class="box1"></div><p class="subtext">this is some subtext under an illustration or image</p></div>
         </div>
     </div>
-    <div class="quote"></div>
-    <div class="sign-up"></div>
-    <div class="copyright"></div>
+    <div class="quote"><p class="quoted">This is an inspiring quote, or a testimonial from a 
+        customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
+        All I know is that it looks nice. 
+    </p><h3 class="author">-Thor, God of Thunder</h3></div>
+    <div class="sign-up"><div class="box3"><div class="call"><h2 class="h2">Call to action! It's time!</h2><h5 class="h5">Sign up for our product by clicking 
+        that button right over here
+    </h5></div><button class="sign">Sign-up</div></div></div>
+    <div class="copyright"><h1>Copy right © The Odin Project 2024</h1></div>
 </body>
 </html>
