did some js challenges

--- a/JavaScriptFoundations/foundations/01.html
+++ b/JavaScriptFoundations/foundations/01.html
@@ -12,7 +12,7 @@
     <h1 class="p4"></h1>
     <h1 class="p5"></h1>
  
-    <script src="fuzzbizz.js"></script>
+    <script src="reverseString.js"></script>
 
 
 </body>
