--- a/JavaScriptFoundations/rpsGame/rps.html
+++ b/JavaScriptFoundations/rpsGame/rps.html
@@ -8,7 +8,13 @@
 
 </head>
 <body>
-    
+    <div class="rps">
+    <div class="pick rock">Rock</div>
+    <div class="pick paper">Paper</div>
+    <div class="pick scissors">Scissors</div></div>
+    <div class="result"></div>
+    <div class="score"><div class="computerScore"></div><div class="humanScore"></div></div>
+    <div class="playGame"><div class="quit"><div class="play"></div></div></div>
     <script src="rps.js"></script>
 </body>
 </html>
