calculator not finished

--- a/JavaScriptFoundations/calculator/calculator.html
+++ b/JavaScriptFoundations/calculator/calculator.html
@@ -1,39 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="calculator.css">
-</head>
-<body>
-    <div class="calculator">
-        <div class="result">
-            <div class="feedback"></div>
-            <div class="input"></div>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="calculator.css">
+    </head>
+    <body>
+        <div class="calculator">
+            <div class="result">
+                <div class="feedback">0</div>
+                <div class="input"></div>
+            </div>
+            <div class="keys">
+                <div class="button clear">ac</div>
+                <div class="button del">del</div>
+                <div class="button modulo">%</div>
+                <div class="button operation">/</div>
+                <div class="button number">7</div>
+                <div class="button number">8</div>
+                <div class="button number">9</div>
+                <div class="button operation">*</div>
+                <div class="button number">4</div>
+                <div class="button number">5</div>
+                <div class="button number">6</div>
+                <div class="button operation">+</div>
+                <div class="button number">1</div>
+                <div class="button number">2</div>
+                <div class="button number">3</div>
+                <div class="button operation">-</div>
+                <div class="button number">0</div>
+                <div class="button .">.</div>
+                <div class="button calculate">=</div>
+                
+            </div>
         </div>
-        <div class="keys">
-            <div class="button ac">ac</div>
-            <div class="button del">del</div>
-            <div class="button modulo">%</div>
-            <div class="button divide">/</div>
-            <div class="button 7">7</div>
-            <div class="button 8">8</div>
-            <div class="button 9">9</div>
-            <div class="button multiply">*</div>
-            <div class="button 4">4</div>
-            <div class="button 5">5</div>
-            <div class="button 6">6</div>
-            <div class="button add">add</div>
-            <div class="button 1">1</div>
-            <div class="button 2">2</div>
-            <div class="button 3">3</div>
-            <div class="button subtract">-</div>
-            <div class="button 0">0</div>
-            <div class="button .">.</div>
-            <div class="button =">=</div>
-            
-        </div>
-    </div>
-</body>
-</html>
+        <script src="calculator.js"></script>
+    </body>
+    </html>
