--- a/JavaScriptFoundations/calculator/calculator.html
+++ b/JavaScriptFoundations/calculator/calculator.html
@@ -15,7 +15,7 @@
             <div class="keys">
                 <div class="button clear">ac</div>
                 <div class="button del">del</div>
-                <div class="button modulo">%</div>
+                <div class="button percent">%</div>
                 <div class="button operation">/</div>
                 <div class="button number">7</div>
                 <div class="button number">8</div>
@@ -30,7 +30,7 @@
                 <div class="button number">3</div>
                 <div class="button operation">-</div>
                 <div class="button number">0</div>
-                <div class="button .">.</div>
+                <div class="button number">.</div>
                 <div class="button calculate">=</div>
                 
             </div>
