--- a/fullStackJavascript/intermidiateCSS/forms/forms.html
+++ b/fullStackJavascript/intermidiateCSS/forms/forms.html
@@ -10,34 +10,46 @@
     <div class="main">
         <div class="left">
             <div class="register">
-                Register Now
+                <a>Plantale<a>
+                <a class="trademark">TM</a>
             </div>
 
             <div class="form">
                 <div class="input">
                     <label for="name"></label>  
                     <input type="text" name="name" id="name">
+                    <span>First Name</span>
                 </div>
+
                 <div class="input">
                     <label for="email"></label>
                     <input type="email" name="email" id="email">
+                    <span>Email</span>
+
+                    
                 </div>
+
                 <div class="input">
                     <label for="password"></label>
                     <input type="password" name="password" id="password">
+                    <span>Password</span>
+
                 </div>
+
                 <div class="input">
                     <label for="confirmPassword"></label>
-                    <input type="password" name="confirmPassword" id="confirmPassword">
-                </div>
+                        <input type="password" name="confirmPassword" id="confirmPassword">
+                        <span>Confirm</span>
+                    </div>
+
             </div>
 
-            <div class="submit"><button type="submit">Sign Up</button></div>
+            <div class="submitContainer"><button class="submit" type="submit">Sign Up</button></div>
             </div>
         <div class="right">
 
         </div>
         </div>
-   
+   <script src="forms.js"></script>
 </body>
 </html>
